js function added

--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,13 @@
     </head>
     <body>
         <input type='text' id='inputBox'>
-        <input type='submit' value='Submit'>
+        <input type='submit' value='Submit' id='submit'>
+        <script>    
+            var button = document.getElementById('submit');
+            button.addEventListener('click', function() {
+                var box = document.getElementById('submit');
+                alert(submit.innerHTML);
+            });
+        </script>
     </body>
 </html>
