--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,8 @@
         <script>    
             var button = document.getElementById('submit');
             button.addEventListener('click', function() {
-                var box = document.getElementById('submit');
-                alert(submit.innerHTML);
+                var box = document.getElementById('inputBox');
+                alert(box.value);
             });
         </script>
     </body>
