--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,25 @@
     <head>
         <title>Hey Joe</title>
     </head>
+    <style>
+        .mydiv {
+            text-align: center;
+            background-color: rgba(64, 120, 192, 1);
+        }
+
+        h3 {
+            color: white;
+            padding: 20px;
+            font-family: courier;
+        }
+    </style>
     <body>
+        
+        <div class='mydiv'>
+            <h3>Aye Aye Captain!</h3>
+        </div>
+
+        <!--
         <input type='text' id='inputBox'>
         <input type='submit' value='Submit' id='submit'>
         <script>    
@@ -12,5 +30,6 @@
                 alert(box.value);
             });
         </script>
+        -->
     </body>
 </html>
